--- a/review.html
+++ b/review.html
@@ -7,17 +7,17 @@
 	<meta name="keywords" content="warrior, game, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+	<link href="favicon.ico" rel="shortcut icon"/>
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i" rel="stylesheet">
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
-	<link rel="stylesheet" href="css/animate.css"/>
+	<link rel="stylesheet" href="bootstrap.min.css"/>
+	<link rel="stylesheet" href="font-awesome.min.css"/>
+	<link rel="stylesheet" href="owl.carousel.css"/>
+	<link rel="stylesheet" href="style.css"/>
+	<link rel="stylesheet" href="animate.css"/>
 
 
 	<!--[if lt IE 9]>
@@ -70,7 +70,7 @@
 
 
 	<!-- Page info section -->
-	<section class="page-info-section set-bg" data-setbg="img/page-top-bg/3.jpg">
+	<section class="page-info-section set-bg" data-setbg="3.jpg">
 		<div class="pi-content">
 			<div class="container">
 				<div class="row">
@@ -91,7 +91,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="review-item">
-						<div class="review-cover set-bg" data-setbg="img/review/5.jpg">
+						<div class="review-cover set-bg" data-setbg="5.jpg">
 							<div class="score yellow">9.3</div>
 						</div>
 						<div class="review-text">
@@ -109,7 +109,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
-						<div class="review-cover set-bg" data-setbg="img/review/6.jpg">
+						<div class="review-cover set-bg" data-setbg="6.jpg">
 							<div class="score yellow">9.3</div>
 						</div>
 						<div class="review-text">
@@ -127,7 +127,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
-						<div class="review-cover set-bg" data-setbg="img/review/7.jpg">
+						<div class="review-cover set-bg" data-setbg="7.jpg">
 							<div class="score yellow">9.3</div>
 						</div>
 						<div class="review-text">
@@ -145,7 +145,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
-						<div class="review-cover set-bg" data-setbg="img/review/8.jpg">
+						<div class="review-cover set-bg" data-setbg="8.jpg">
 							<div class="score yellow">9.3</div>
 						</div>
 						<div class="review-text">
@@ -163,7 +163,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
-						<div class="review-cover set-bg" data-setbg="img/review/9.jpg">
+						<div class="review-cover set-bg" data-setbg="9.jpg">
 							<div class="score yellow">9.3</div>
 						</div>
 						<div class="review-text">
@@ -181,7 +181,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="review-item">
-						<div class="review-cover set-bg" data-setbg="img/review/10.jpg">
+						<div class="review-cover set-bg" data-setbg="/10.jpg">
 							<div class="score yellow">9.3</div>
 						</div>
 						<div class="review-text">
@@ -205,7 +205,7 @@
 
 
 		<!-- Review section -->
-		<section class="review-section spad set-bg" data-setbg="img/review-bg.png">
+		<section class="review-section spad set-bg" data-setbg="review-bg.png">
 			<div class="container">
 				<div class="section-title">
 					<div class="cata new">new</div>
@@ -214,7 +214,7 @@
 				<div class="row">
 					<div class="col-lg-3 col-md-6">
 						<div class="review-item">
-							<div class="review-cover set-bg" data-setbg="img/review/Minecraft.png">
+							<div class="review-cover set-bg" data-setbg="Minecraft.png">
 								<div class="score yellow">9.1</div>
 							</div>
 							<div class="review-text">
@@ -225,7 +225,7 @@
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<div class="review-item">
-							<div class="review-cover set-bg" data-setbg="img/review/2.jpg">
+							<div class="review-cover set-bg" data-setbg="2.jpg">
 								<div class="score purple">9.5</div>
 							</div>
 							<div class="review-text">
@@ -236,7 +236,7 @@
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<div class="review-item">
-							<div class="review-cover set-bg" data-setbg="img/review/3.jpg">
+							<div class="review-cover set-bg" data-setbg="/3.jpg">
 								<div class="score green">9.1</div>
 							</div>
 							<div class="review-text">
@@ -247,7 +247,7 @@
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<div class="review-item">
-							<div class="review-cover set-bg" data-setbg="img/review/4.jpg">
+							<div class="review-cover set-bg" data-setbg="4.jpg">
 								<div class="score pink">9.7</div>
 							</div>
 							<div class="review-text">
@@ -280,10 +280,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 
 	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/jquery.marquee.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="jquery-3.2.1.min.js"></script>
+	<script src="bootstrap.min.js"></script>
+	<script src="owl.carousel.min.js"></script>
+	<script src="jquery.marquee.min.js"></script>
+	<script src="main.js"></script>
     </body>
 </html>
