--- a/contact.html
+++ b/contact.html
@@ -7,17 +7,17 @@
 	<meta name="keywords" content="warrior, game, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+	<link href="favicon.ico" rel="shortcut icon"/>
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i" rel="stylesheet">
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.css"/>
-	<link rel="stylesheet" href="css/style.css"/>
-	<link rel="stylesheet" href="css/animate.css"/>
+	<link rel="stylesheet" href="bootstrap.min.css"/>
+	<link rel="stylesheet" href="font-awesome.min.css"/>
+	<link rel="stylesheet" href="owl.carousel.css"/>
+	<link rel="stylesheet" href="style.css"/>
+	<link rel="stylesheet" href="animate.css"/>
 
 
 	<!--[if lt IE 9]>
@@ -71,7 +71,7 @@
 
 
 	<!-- Page info section -->
-	<section class="page-info-section set-bg" data-setbg="img/page-top-bg/5.jpg">
+	<section class="page-info-section set-bg" data-setbg="5.jpg">
 		<div class="pi-content">
 			<div class="container">
 				<div class="row">
@@ -149,11 +149,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 
 	<!--====== Javascripts & Jquery ======-->
-	<script src="js/jquery-3.2.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/owl.carousel.min.js"></script>
-	<script src="js/jquery.marquee.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="jquery-3.2.1.min.js"></script>
+	<script src="bootstrap.min.js"></script>
+	<script src="owl.carousel.min.js"></script>
+	<script src="jquery.marquee.min.js"></script>
+	<script src="main.js"></script>
 
 
 	<!-- load for map -->
