--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 	<meta name="keywords" content="warrior, game, creative, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->   
-	<link href="img/favicon.ico" rel="shortcut icon"/>
+	<link href="favicon.ico" rel="shortcut icon"/>
 
 	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i" rel="stylesheet">
 
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
-	<link rel="stylesheet" href="css/owl.carousel.css"/>
-	<link rel="stylesheet" href="css/s	tyle.css"/>
-	<link rel="stylesheet" href="css/animate.css"/>
+	<link rel="stylesheet" href="bootstrap.min.css"/>
+	<link rel="stylesheet" href="font-awesome.min.css"/>
+	<link rel="stylesheet" href="owl.carousel.css"/>
+	<link rel="stylesheet" href="style.css"/>
+	<link rel="stylesheet" href="animate.css"/>
 
 
 	<!--[if lt IE 9]>
@@ -60,7 +60,7 @@
 	<!-- Hero section -->
 	<section class="hero-section">
 		<div class="hero-slider owl-carousel">
-			<div class="hs-item set-bg" data-setbg="img/slider-1.jpg">
+			<div class="hs-item set-bg" data-setbg="slider-1.jpg">
 				<div class="hs-text">
 					<div class="container">
 						<h2>Τα καλυτερα <span>Games</span> Εκει εξω</h2>
@@ -69,7 +69,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="hs-item set-bg" data-setbg="img/slider-2.jpg">
+			<div class="hs-item set-bg" data-setbg="slider-2.jpg">
 				<div class="hs-text">
 					<div class="container">
 						<h2>Τα καλυτερα <span>Games</span> Εκει εξω</h2>
@@ -102,7 +102,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-3 col-md-6 p-0">
-					<div class="feature-item set-bg" data-setbg="img/features/Eldenring.jpg">
+					<div class="feature-item set-bg" data-setbg="Eldenring.jpg">
 						<span class="cata new">new</span>
 						<div class="fi-content text-white">
 							<h5><a href="#">Elden Ring							</a></h5>
@@ -112,7 +112,7 @@
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 p-0">
-					<div class="feature-item set-bg" data-setbg="img/features/tww.jpg">
+					<div class="feature-item set-bg" data-setbg="tww.jpg">
 						<span class="cata strategy">strategy</span>
 						<div class="fi-content text-white">
 							<h5><a href="#">Total War: Warhammer III</a></h5>
@@ -122,7 +122,7 @@
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 p-0">
-					<div class="feature-item set-bg" data-setbg="img/features/maria.jpg">
+					<div class="feature-item set-bg" data-setbg="maria.jpg">
 						<span class="cata new">new</span>
 						<div class="fi-content text-white">
 							<h5><a href="#">Mario + Rabbids Sparks of Hope</a></h5>
@@ -132,7 +132,7 @@
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6 p-0">
-					<div class="feature-item set-bg" data-setbg="img/features/grid.jpeg">
+					<div class="feature-item set-bg" data-setbg="grid.jpeg">
 						<span class="cata racing">racing</span>
 						<div class="fi-content text-white">
 							<h5><a href="#">Grid Legends</a></h5>
@@ -148,7 +148,7 @@
 
 
 	<!-- Recent game section  -->
-	<section class="recent-game-section spad set-bg" data-setbg="img/recent-game-bg.png">
+	<section class="recent-game-section spad set-bg" data-setbg="recent-game-bg.png">
 		<div class="container">
 			<div class="section-title">
 				<div class="cata new">new</div>
@@ -157,7 +157,7 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-6">
 					<div class="recent-game-item">
-						<div class="rgi-thumb set-bg" data-setbg="img/recent-game/ps5.png">
+						<div class="rgi-thumb set-bg" data-setbg="ps5.png">
 							<div class="cata new">new</div>
 						</div>
 						<div class="rgi-content">
@@ -172,7 +172,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="recent-game-item">
-						<div class="rgi-thumb set-bg" data-setbg="img/recent-game/Gran_Turismo_7_cover_art.png">
+						<div class="rgi-thumb set-bg" data-setbg="Gran_Turismo_7_cover_art.png">
 							<div class="cata racing">racing</div>
 						</div>
 						<div class="rgi-content">
@@ -187,7 +187,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="recent-game-item">
-						<div class="rgi-thumb set-bg" data-setbg="img/recent-game/3.jpg">
+						<div class="rgi-thumb set-bg" data-setbg="3.jpg">
 							<div class="cata adventure">Adventure</div>
 						</div>
 						<div class="rgi-content">
@@ -215,7 +215,7 @@
 					<div class="tournament-item mb-4 mb-lg-0">
 						<div class="ti-notic">Premium Tournament</div>
 						<div class="ti-content">
-							<div class="ti-thumb set-bg" data-setbg="img/tournament/warzone.jpg"></div>
+							<div class="ti-thumb set-bg" data-setbg="warzone.jpg"></div>
 							<div class="ti-text">
 								<h4>Call of Duty: Warzone</h4>
 								<ul>
@@ -234,7 +234,7 @@
 					<div class="tournament-item">
 						<div class="ti-notic">Premium Tournament</div>
 						<div class="ti-content">
-							<div class="ti-thumb set-bg" data-setbg="img/tournament/warzone.jpg"></div>
+							<div class="ti-thumb set-bg" data-setbg="warzone.jpg"></div>
 							<div class="ti-text">
 								<h4>Call of Duty: Warzone</h4>
 								<ul>
